# hello-autotools

./: .gitignore  Makefile.am  README.md  configure.ac
include/: Makefile.am  hello.h
lib/: Makefile.am  hello.c
src/: Makefile.am  main.c
